fix print overflow

--- a/src/global.css
+++ b/src/global.css
@@ -186,7 +186,7 @@ input[type='number']::-webkit-inner-spin-button {
     order: -1;
   }
   .print-items {
-    order: 1;
+    order: 0;
   }
 
   /* .print-only {
@@ -198,6 +198,7 @@ input[type='number']::-webkit-inner-spin-button {
 
   .print-only {
     display: block;
+    height: 100%;
   }
   /* .MuiCard-root {
     break-inside: avoid; 
